Convert PHP to HTML for Vercel, add product page links for Eventify and Wealthwise

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,14 @@
 {
   "rewrites": [
     {
+      "source": "/eventify-app",
+      "destination": "/eventify-app.html"
+    },
+    {
+      "source": "/wealthwise",
+      "destination": "/wealthwise.html"
+    },
+    {
       "source": "/about",
       "destination": "/about.html"
     },
