Fix deployment config and vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,242 +1,4 @@
 {
-  "rewrites": [
-    {
-      "source": "/about",
-      "destination": "/about.html"
-    },
-    {
-      "source": "/our-team",
-      "destination": "/our-team.html"
-    },
-    {
-      "source": "/PORTFOLIO",
-      "destination": "/PORTFOLIO.html"
-    },
-    {
-      "source": "/blogs",
-      "destination": "/blogs.html"
-    },
-    {
-      "source": "/contact-us",
-      "destination": "/contact-us.html"
-    },
-    {
-      "source": "/contact",
-      "destination": "/contact.html"
-    },
-    {
-      "source": "/blogspage",
-      "destination": "/blogspage.html"
-    },
-    {
-      "source": "/BLOG",
-      "destination": "/BLOG.html"
-    },
-    {
-      "source": "/INVESTORS",
-      "destination": "/INVESTORS.html"
-    },
-    {
-      "source": "/our-team-single",
-      "destination": "/our-team-single.html"
-    },
-    {
-      "source": "/investors-single",
-      "destination": "/investors-single.html"
-    },
-    {
-      "source": "/PORTFOLIO SINGLE",
-      "destination": "/PORTFOLIO SINGLE.html"
-    },
-    {
-      "source": "/team-single",
-      "destination": "/team-single.html"
-    },
-    {
-      "source": "/blogs/blog-post-1-eventify-community-events",
-      "destination": "/blogs/blog-post-1-eventify-community-events.html"
-    },
-    {
-      "source": "/blogs/blog-post-2-wealthwise-financial-literacy",
-      "destination": "/blogs/blog-post-2-wealthwise-financial-literacy.html"
-    },
-    {
-      "source": "/blogs/blog-post-3-ai-community-engagement",
-      "destination": "/blogs/blog-post-3-ai-community-engagement.html"
-    },
-    {
-      "source": "/blogs/blog-post-4-mobile-app-development",
-      "destination": "/blogs/blog-post-4-mobile-app-development.html"
-    },
-    {
-      "source": "/blogs/blog-post-5-financial-wellness-trends",
-      "destination": "/blogs/blog-post-5-financial-wellness-trends.html"
-    },
-    {
-      "source": "/blogs/blog-post-6-community-building-digital-age",
-      "destination": "/blogs/blog-post-6-community-building-digital-age.html"
-    },
-    {
-      "source": "/blogs/blog-post-7-startup-development-process",
-      "destination": "/blogs/blog-post-7-startup-development-process.html"
-    },
-    {
-      "source": "/blogs/blog-post-8-user-experience-design",
-      "destination": "/blogs/blog-post-8-user-experience-design.html"
-    },
-    {
-      "source": "/blogs/blog-post-9-financial-ai-technology",
-      "destination": "/blogs/blog-post-9-financial-ai-technology.html"
-    },
-    {
-      "source": "/blogs/blog-post-10-innovation-community-finance",
-      "destination": "/blogs/blog-post-10-innovation-community-finance.html"
-    },
-    {
-      "source": "/blogs/ai-financial-technology-blog",
-      "destination": "/blogs/ai-financial-technology-blog.html"
-    },
-    {
-      "source": "/blogs/blog-post",
-      "destination": "/blogs/BLOG POST.html"
-    },
-    {
-      "source": "/blogs/blogpost-templates",
-      "destination": "/blogs/blogpost-templates.html"
-    }
-  ],
-  "redirects": [
-    {
-      "source": "/about.html",
-      "destination": "/about",
-      "permanent": true
-    },
-    {
-      "source": "/our-team.html",
-      "destination": "/our-team",
-      "permanent": true
-    },
-    {
-      "source": "/PORTFOLIO.html",
-      "destination": "/PORTFOLIO",
-      "permanent": true
-    },
-    {
-      "source": "/blogs.html",
-      "destination": "/blogs",
-      "permanent": true
-    },
-    {
-      "source": "/contact-us.html",
-      "destination": "/contact-us",
-      "permanent": true
-    },
-    {
-      "source": "/blogspage.html",
-      "destination": "/blogspage",
-      "permanent": true
-    },
-    {
-      "source": "/BLOG.html",
-      "destination": "/BLOG",
-      "permanent": true
-    },
-    {
-      "source": "/INVESTORS.html",
-      "destination": "/INVESTORS",
-      "permanent": true
-    },
-    {
-      "source": "/our-team-single.html",
-      "destination": "/our-team-single",
-      "permanent": true
-    },
-    {
-      "source": "/investors-single.html",
-      "destination": "/investors-single",
-      "permanent": true
-    },
-    {
-      "source": "/PORTFOLIO SINGLE.html",
-      "destination": "/PORTFOLIO SINGLE",
-      "permanent": true
-    },
-    {
-      "source": "/team-single.html",
-      "destination": "/team-single",
-      "permanent": true
-    },
-    {
-      "source": "/blog-post-1-eventify-community-events.html",
-      "destination": "/blogs/blog-post-1-eventify-community-events",
-      "permanent": true
-    },
-    {
-      "source": "/blog-post-2-wealthwise-financial-literacy.html",
-      "destination": "/blogs/blog-post-2-wealthwise-financial-literacy",
-      "permanent": true
-    },
-    {
-      "source": "/blog-post-3-ai-community-engagement.html",
-      "destination": "/blogs/blog-post-3-ai-community-engagement",
-      "permanent": true
-    },
-    {
-      "source": "/blog-post-4-mobile-app-development.html",
-      "destination": "/blogs/blog-post-4-mobile-app-development",
-      "permanent": true
-    },
-    {
-      "source": "/blog-post-5-financial-wellness-trends.html",
-      "destination": "/blogs/blog-post-5-financial-wellness-trends",
-      "permanent": true
-    },
-    {
-      "source": "/blog-post-6-community-building-digital-age.html",
-      "destination": "/blogs/blog-post-6-community-building-digital-age",
-      "permanent": true
-    },
-    {
-      "source": "/blog-post-7-startup-development-process.html",
-      "destination": "/blogs/blog-post-7-startup-development-process",
-      "permanent": true
-    },
-    {
-      "source": "/blog-post-8-user-experience-design.html",
-      "destination": "/blogs/blog-post-8-user-experience-design",
-      "permanent": true
-    },
-    {
-      "source": "/blog-post-9-financial-ai-technology.html",
-      "destination": "/blogs/blog-post-9-financial-ai-technology",
-      "permanent": true
-    },
-    {
-      "source": "/blog-post-10-innovation-community-finance.html",
-      "destination": "/blogs/blog-post-10-innovation-community-finance",
-      "permanent": true
-    },
-    {
-      "source": "/ai-financial-technology-blog.html",
-      "destination": "/blogs/ai-financial-technology-blog",
-      "permanent": true
-    },
-    {
-      "source": "/BLOG POST.html",
-      "destination": "/blogs/blog-post",
-      "permanent": true
-    },
-    {
-      "source": "/blogpost-templates.html",
-      "destination": "/blogs/blogpost-templates",
-      "permanent": true
-    }
-  ],
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "functions": {
-    "api/contact.js": {
-      "runtime": "nodejs18.x"
-    }
-  }
+    "cleanUrls": true,
+    "trailingSlash": false
 }
